--- a/DungeonKeeper/en.lproj/DKDocument.xib
+++ b/DungeonKeeper/en.lproj/DKDocument.xib
@@ -53,27 +53,29 @@
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSScrollView" id="55654587">
+						<object class="NSScrollView" id="824338435">
 							<reference key="NSNextResponder" ref="568628114"/>
-							<int key="NSvFlags">268</int>
+							<int key="NSvFlags">274</int>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<object class="NSClipView" id="1020747601">
-									<reference key="NSNextResponder" ref="55654587"/>
+								<object class="NSClipView" id="264408228">
+									<reference key="NSNextResponder" ref="824338435"/>
 									<int key="NSvFlags">2304</int>
 									<object class="NSMutableArray" key="NSSubviews">
 										<bool key="EncodedWithXMLCoder">YES</bool>
 										<object class="NSCustomView" id="225675761">
-											<reference key="NSNextResponder" ref="1020747601"/>
-											<int key="NSvFlags">274</int>
+											<reference key="NSNextResponder" ref="264408228"/>
+											<int key="NSvFlags">268</int>
 											<string key="NSFrameSize">{507, 413}</string>
-											<reference key="NSSuperview" ref="1020747601"/>
+											<reference key="NSSuperview" ref="264408228"/>
+											<reference key="NSWindow"/>
 											<string key="NSReuseIdentifierKey">_NS:499</string>
 											<string key="NSClassName">DKMapEditor</string>
 										</object>
 									</object>
 									<string key="NSFrame">{{1, 1}, {507, 413}}</string>
-									<reference key="NSSuperview" ref="55654587"/>
+									<reference key="NSSuperview" ref="824338435"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="225675761"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<reference key="NSDocView" ref="225675761"/>
@@ -88,41 +90,45 @@
 									</object>
 									<int key="NScvFlags">4</int>
 								</object>
-								<object class="NSScroller" id="78186363">
-									<reference key="NSNextResponder" ref="55654587"/>
+								<object class="NSScroller" id="571121880">
+									<reference key="NSNextResponder" ref="824338435"/>
 									<int key="NSvFlags">256</int>
 									<string key="NSFrame">{{508, 1}, {15, 413}}</string>
-									<reference key="NSSuperview" ref="55654587"/>
+									<reference key="NSSuperview" ref="824338435"/>
+									<reference key="NSWindow"/>
 									<string key="NSReuseIdentifierKey">_NS:26</string>
-									<reference key="NSTarget" ref="55654587"/>
+									<reference key="NSTarget" ref="824338435"/>
 									<string key="NSAction">_doScroller:</string>
 									<double key="NSCurValue">1</double>
 									<double key="NSPercent">0.96363627910614014</double>
 								</object>
-								<object class="NSScroller" id="734750980">
-									<reference key="NSNextResponder" ref="55654587"/>
+								<object class="NSScroller" id="598114229">
+									<reference key="NSNextResponder" ref="824338435"/>
 									<int key="NSvFlags">256</int>
 									<string key="NSFrame">{{1, 414}, {507, 15}}</string>
-									<reference key="NSSuperview" ref="55654587"/>
+									<reference key="NSSuperview" ref="824338435"/>
+									<reference key="NSWindow"/>
 									<string key="NSReuseIdentifierKey">_NS:30</string>
 									<int key="NSsFlags">1</int>
-									<reference key="NSTarget" ref="55654587"/>
+									<reference key="NSTarget" ref="824338435"/>
 									<string key="NSAction">_doScroller:</string>
 									<double key="NSPercent">0.50602412223815918</double>
 								</object>
 							</object>
 							<string key="NSFrame">{{-1, -16}, {524, 430}}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSNextKeyView" ref="1020747601"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="264408228"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133170</int>
-							<reference key="NSVScroller" ref="78186363"/>
-							<reference key="NSHScroller" ref="734750980"/>
-							<reference key="NSContentView" ref="1020747601"/>
+							<reference key="NSVScroller" ref="571121880"/>
+							<reference key="NSHScroller" ref="598114229"/>
+							<reference key="NSContentView" ref="264408228"/>
 						</object>
 					</object>
 					<string key="NSFrameSize">{507, 413}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="225675761"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
@@ -177,6 +183,14 @@
 					</object>
 					<int key="connectionID">100024</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">initialFirstResponder</string>
+						<reference key="source" ref="275939982"/>
+						<reference key="destination" ref="225675761"/>
+					</object>
+					<int key="connectionID">100029</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -214,7 +228,7 @@
 						<reference key="object" ref="568628114"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="55654587"/>
+							<reference ref="824338435"/>
 						</object>
 						<reference key="parent" ref="275939982"/>
 					</object>
@@ -226,29 +240,29 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100025</int>
-						<reference key="object" ref="55654587"/>
+						<reference key="object" ref="824338435"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="78186363"/>
-							<reference ref="734750980"/>
+							<reference ref="571121880"/>
+							<reference ref="598114229"/>
 							<reference ref="225675761"/>
 						</object>
 						<reference key="parent" ref="568628114"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100026</int>
-						<reference key="object" ref="78186363"/>
-						<reference key="parent" ref="55654587"/>
+						<reference key="object" ref="571121880"/>
+						<reference key="parent" ref="824338435"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100027</int>
-						<reference key="object" ref="734750980"/>
-						<reference key="parent" ref="55654587"/>
+						<reference key="object" ref="598114229"/>
+						<reference key="parent" ref="824338435"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100021</int>
 						<reference key="object" ref="225675761"/>
-						<reference key="parent" ref="55654587"/>
+						<reference key="parent" ref="824338435"/>
 					</object>
 				</object>
 			</object>
@@ -293,9 +307,72 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">100028</int>
+			<int key="maxID">100029</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">DKDocument</string>
+					<string key="superclassName">NSDocument</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">editor</string>
+						<string key="NS.object.0">DKMapEditor</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">editor</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">editor</string>
+							<string key="candidateClassName">DKMapEditor</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DKDocument.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DKMapEditor</string>
+					<string key="superclassName">NSView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>dataSource</string>
+							<string>delegate</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>dataSource</string>
+							<string>delegate</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">dataSource</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">delegate</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DKMapEditor.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
